Fix some layout bugs on iOS

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -29,5 +29,10 @@
     position: relative;
     float: right;
     margin-top: 5px;
+
+    svg {
+      width: 24px;
+      height: 24px;
+    }
   }
 }
