--- a/src/app/components/views/expense/expense.scss
+++ b/src/app/components/views/expense/expense.scss
@@ -3,4 +3,8 @@
     margin-top: 1rem;
     text-align: right;
   }
+
+  .date-input {
+    -webkit-appearance: none;
+  }
 }
